# big_arm_ros2

./: Forward_Kinematics.asv  Forward_Kinematics.m  Lagrange_Model.asv  Lagrange_Model.m  README.md  big_arm_simscape.slx  control.sh  controller.slx  controller.slxc  display.sh  effort_controller.sh  for2021a  gazebo.sh  joint_trajectories.slxc  lagrange_model.slx  mov_q1  mov_q2
Mathematical model/: Effort_controller.m  InverseKinematics.ipynb  Inverse_Kinematics.asv  Inverse_Kinematics.m  Lagrange_Model.asv  Lagrange_Model.m  Lagrange_Model_v2.m  Untitled.ipynb  big_arm_simscape.slx  big_arm_simscape.slxc  controller.slx  controller.slxc  eq1  eq2  eq3  for2021a.asv  (+6 more)
install/big_arm_interfaces/share/big_arm_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/big_arm_interfaces/share/big_arm_interfaces/cmake/: big_arm_interfaces__rosidl_generator_cExport.cmake  big_arm_interfaces__rosidl_generator_cppExport.cmake  big_arm_interfaces__rosidl_typesupport_cExport-noconfig.cmake  big_arm_interfaces__rosidl_typesupport_cExport.cmake  big_arm_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  big_arm_interfaces__rosidl_typesupport_introspection_cExport.cmake  big_arm_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  big_arm_interfaces__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/big_arm_interfaces/share/big_arm_interfaces/srv/: JointsNow.idl  JointsNow.srv  JointsNow_Request.msg  JointsNow_Response.msg
(+186 files in other folders)
